syntax = "proto3";

option csharp_namespace = "Spravy.Picture.Protos";

package spravy.picture;

import "Protos/picture_messages.proto";

service PictureService {
  rpc GetPicture (GetPictureRequest) returns (GetPictureReply);
  rpc EditPicture (EditPictureRequest) returns (EditPictureReply);
}